--- a/index.html
+++ b/index.html
@@ -699,18 +699,173 @@ footer p {
 </div>
 
 <!-- FOOTER -->
-<footer>
-  <div class="logos">
+<!-- FOOTER ESTILO DISNEY+ REAL -->
+<footer class="footer-disney">
+
+  <!-- LOGO PRINCIPAL -->
+  <div class="footer-logo">
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Pixar_logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Star_Wars_Logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/National-Geographic-Logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg">
   </div>
 
-  <p>© 2025 Plataforma+. Todos los derechos reservados.</p>
+  <!-- MENÚS PRINCIPALES -->
+  <div class="footer-menus">
+
+    <div class="footer-column">
+      <h4>Más información</h4>
+      <a href="#">Política de privacidad</a>
+      <a href="#">Términos de uso</a>
+      <a href="#">Preferencias de cookies</a>
+      <a href="#">Publicidad basada en intereses</a>
+    </div>
+
+    <div class="footer-column">
+      <h4>Ayuda</h4>
+      <a href="#">Centro de ayuda</a>
+      <a href="#">Dispositivos compatibles</a>
+      <a href="#">Acerca de nosotros</a>
+      <a href="#">Empleo</a>
+    </div>
+
+    <div class="footer-column">
+      <h4>Colecciones</h4>
+      <a href="#">Disney</a>
+      <a href="#">Pixar</a>
+      <a href="#">Marvel</a>
+      <a href="#">Star Wars</a>
+      <a href="#">National Geographic</a>
+    </div>
+
+  </div>
+
+  <!-- REDES SOCIALES -->
+  <div class="footer-social">
+      <a class="circle"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png"></a>
+      <a class="circle"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384005.png"></a>
+      <a class="circle"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384017.png"></a>
+      <a class="circle"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png"></a>
+  </div>
+
+  <!-- SELECTOR DE IDIOMA -->
+  <div class="footer-lang">
+    <select>
+      <option>Español</option>
+      <option>English</option>
+      <option>Português</option>
+    </select>
+  </div>
+
+  <!-- COPYRIGHT -->
+  <p class="footer-copy">© 2025 Plataforma+ | Inspirado en Disney+</p>
+
 </footer>
+
+<style>
+/* FOOTER DISNEY+ REAL */
+.footer-disney {
+  padding: 50px 25px;
+  background: #000;
+  color: #fff;
+  text-align: center;
+  margin-top: 50px;
+  border-top: 1px solid #111;
+  font-weight: 300;
+}
+
+.footer-logo img {
+  height: 55px;
+  opacity: .9;
+  margin-bottom: 30px;
+}
+
+/* MENÚS */
+.footer-menus {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+.footer-column {
+  min-width: 150px;
+  text-align: left;
+}
+
+.footer-column h4 {
+  font-size: 15px;
+  opacity: .7;
+  margin-bottom: 12px;
+}
+
+.footer-column a {
+  display: block;
+  color: #fff;
+  opacity: .7;
+  font-size: 14px;
+  margin-bottom: 6px;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.footer-column a:hover {
+  opacity: 1;
+}
+
+/* REDES SOCIALES CÍRCULOS */
+.footer-social {
+  display: flex;
+  justify-content: center;
+  gap: 14px;
+  margin-bottom: 30px;
+}
+
+.footer-social .circle {
+  width: 45px;
+  height: 45px;
+  background: #1a1a1a;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social img {
+  width: 22px;
+  opacity: .85;
+}
+
+/* SELECTOR IDIOMA */
+.footer-lang select {
+  background: #111;
+  color: #fff;
+  padding: 10px 18px;
+  border-radius: 6px;
+  border: 1px solid #333;
+  font-size: 14px;
+  outline: none;
+  margin-bottom: 25px;
+}
+
+/* COPYRIGHT */
+.footer-copy {
+  font-size: 13px;
+  opacity: .6;
+}
+
+/* RESPONSIVE */
+@media (max-width: 600px) {
+  .footer-menus {
+    flex-direction: column;
+    text-align: center;
+    gap: 25px;
+  }
+
+  .footer-column {
+    text-align: center;
+  }
+}
+</style>
+
 
 <!-- SCRIPT -->
 <script>
